--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
   <body>
        <form id="calculator" onsubmit="return false">
            <input type="text" name="" id="panel">
-           <div class="numbers">1</div>
-           <div class="numbers">2</div>
-           <div class="numbers">3</div>
-           <div class="numbers">4</div>
-           <div class="numbers">5</div>
-           <div class="numbers">6</div>
-           <div class="numbers">7</div>
-           <div class="numbers">8</div>
-           <div class="numbers">9</div>
-           <div class="numbers">0</div>
-           <div class="operators">+</div>
-           <div class="operators">-</div>
-           <div class="operators">*</div>
-           <div class="operators">/</div>
+           <div id='clear'>C</div>
+           <div class="digits">1</div>
+           <div class="digits">2</div>
+           <div class="digits">3</div>
+           <div class="digits">4</div>
+           <div class="digits">5</div>
+           <div class="digits">6</div>
+           <div class="digits">7</div>
+           <div class="digits">8</div>
+           <div class="digits">9</div>
+           <div class="digits">0</div>
+           <div class="digits">+</div>
+           <div class="digits">-</div>
+           <div class="digits">*</div>
+           <div class="digits">/</div>
            <button id="equal" type="submit">=</button>
        </form>
       <script src="script.js"></script>
