--- a/index.html
+++ b/index.html
@@ -34,10 +34,9 @@
       <div class="digits">/</div>
       <button id="equal" type="submit">=</button>
     </form>
-    <footer>
-        History
-        <div id="history"></div>
-    </footer>
+    <div id='historia'>History: 
+        <p id="history"></p>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
